# BO-Mod

./: .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: frontend.yml
backend/: Cargo.toml
backend/src/: main.rs  memory.rs  proccess.rs
frontend/router/: index.ts
src/: App.tsx  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: addresses.rs  main.rs  process.rs
src/assets/: styles.css
src/components/ui/: AppSidebar.vue
src/views/: AboutView.vue  HomeView.vue
